--- a/skunkwerk/generation-3/polymer-a/projects/pica/elements/pi-topic-item.html
+++ b/skunkwerk/generation-3/polymer-a/projects/pica/elements/pi-topic-item.html
@@ -54,8 +54,8 @@ Polymer({
     this.style.visibility = visibility;
   },
   computeBackground: function(item) {
-    return item && item.topic && 'url(assets/' + item.topic.toLowerCase() 
-      + '.jpg)';
+    return item && item.thumb && 'url(' + item.thumb + ')';
+    //return item && item.topic && 'url(assets/' + item.topic.toLowerCase() + '.jpg)';
   }
 });
 
