--- a/skunkwerk/mutation-1/polymer/polymer.html
+++ b/skunkwerk/mutation-1/polymer/polymer.html
@@ -1,7 +1,10 @@
+<link rel="import" href="layout.html">
+<link rel="import" href="lang.html">
 <link rel="import" href="base.html">
 <link rel="import" href="features.html">
 
 <script>
+
   Base.installFeatures();
   Base.__proto__ = HTMLElement.prototype;
   
@@ -9,8 +12,9 @@
     prototype.__proto__ = Base;
     prototype.registerCallback();
     document.registerElement(prototype.name, {prototype: prototype});
-  }
-  
+  };
+
   Polymer.log = {
   };
+
 </script>
