bring g-3/p-3/mail and m-1/p-0/mail into closer output proximity for better evaluation of perf tool; increase iframe size in frame-tester

--- a/skunkwerk/generation-3/polymer-3/projects/mail/app.html
+++ b/skunkwerk/generation-3/polymer-3/projects/mail/app.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="app.css">
 
 </head>
-<body fullbleed vertical layout>
+<body fullbleed vertical layout xstyle="display: none;">
 
   <script>
     console.perf();
