--- a/skunkwerk/mutation-1/polymer-0/projects/mail/elements/x-contact-item.html
+++ b/skunkwerk/mutation-1/polymer-0/projects/mail/elements/x-contact-item.html
@@ -16,7 +16,7 @@
   </style>
 
   <div horizontal center layout>  
-    <img id="avatar" avatar>&nbsp;<span id="from"></span> <span id="count"></span> 
+    <img id="avatar" avatar>&nbsp;<span id="from"></span>&nbsp;<span id="count"></span> 
   </div>
   
 </template>
