--- a/skunkwerk/mutation-1/polymer-0/projects/mail/app.html
+++ b/skunkwerk/mutation-1/polymer-0/projects/mail/app.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="app.css">
 
 </head>
-<body fullbleed vertical layout>
+<body fullbleed vertical layout xstyle="display: none;">
 
   <script>console.perf();</script>
 
