--- a/skunkwerk/perf/perf-lib/frame-tester.html
+++ b/skunkwerk/perf/perf-lib/frame-tester.html
@@ -11,9 +11,10 @@
     iframe {
       position: absolute;
       border: 0;
-      width: 1024px;
-      height: 800px;
+      width: 1920px;
+      height: 10800px;
       visibility: hidden;
+      xdisplay: none;
     }  
     o {
       color: rgba(255, 0, 0, 0.5);
