--- a/skunkwerk/generation-3/polymer-3/projects/mail/app.html
+++ b/skunkwerk/generation-3/polymer-3/projects/mail/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <script src="../../lib/perf.js"></script>
+  <script src="../../../../perf/perf.js"></script>
 
   <meta charset="utf-8">
   <title>app</title>
@@ -19,9 +19,7 @@
 </head>
 <body fullbleed vertical layout xstyle="display: none;">
 
-  <script>
-    console.perf();
-  </script>
+  <script>console.perf();</script>
 
   <x-app flex></x-app>
 
