moving chairs around, add an extra rAF to console.perfEnd, remove asynchrony from g-3/p3/elements/x-pages.html (potentially bad lab practice)

--- a/skunkwerk/generation-3/polymer-3/projects/mail/app.html
+++ b/skunkwerk/generation-3/polymer-3/projects/mail/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <script src="../../../../perf/perf.js"></script>
+  <script src="../../../../perf-lib/perf.js"></script>
 
   <meta charset="utf-8">
   <title>app</title>
