--- a/skunkwerk/mutation-1/polymer-0/projects/mail/app.html
+++ b/skunkwerk/mutation-1/polymer-0/projects/mail/app.html
@@ -6,7 +6,7 @@
 
   <meta charset="utf-8">
 
-  <script src="../../../../perf/perf.js"></script>
+  <script src="../../../../perf-lib/perf.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
