--- a/skunkwerk/perf/mail.html
+++ b/skunkwerk/perf/mail.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-  <frame-tester runs="25" base="../../"></frame-tester>
+  <frame-tester runs="25" base="../"></frame-tester>
 
   <script>
     document.querySelector('frame-tester').tests = [
       'generation-3/polymer-3/projects/mail/app.html',
-      'generation-3/polymer-4/projects/mail/app.html',
-      'generation-3/polymer-5/projects/mail/app.html',
+      //'generation-3/polymer-4/projects/mail/app.html',
+      //'generation-3/polymer-5/projects/mail/app.html',
       'mutation-1/polymer-0/projects/mail/app.html',
-      'mutation-1/polymer-1/projects/mail/app.html'
+      //'mutation-1/polymer-1/projects/mail/app.html'
     ];
   </script>
 
