--- a/skunkwerk/generation-3/polymer-3/elements/x-pages.html
+++ b/skunkwerk/generation-3/polymer-3/elements/x-pages.html
@@ -18,9 +18,12 @@
       this.publishProperty('selected');
       this.watch('selected', this.selectedChanged);
       // eek
-      setTimeout(function() {
-        this.selected = 0;
-      }.bind(this), 0);
+      //setTimeout(function() {
+      //  this.selected = 0;
+      //}.bind(this), 0);
+    },
+    attachedCallback: function() {
+      this.selected = this.selected || 0;
     },
     selectedChanged: function(selected) {
       var pages = this.$('#pages').getDistributedNodes();
