restore specimens to the mail test (g3-p4, g3-p5, m1-p1), update specimens for the new regime

--- a/skunkwerk/generation-3/polymer-3/projects/mail/app.html
+++ b/skunkwerk/generation-3/polymer-3/projects/mail/app.html
@@ -107,10 +107,7 @@
 
   </script>
 
-  <!-- perf measure -->
-  <script>
-    console.perfEnd();
-  </script>
+  <script>console.perfEnd();</script>
 
 </body>
 </html>
