--- a/skunkwerk/generation-3/polymer-5/projects/mail/app.html
+++ b/skunkwerk/generation-3/polymer-5/projects/mail/app.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 
-  <script src="../../lib/perf.js"></script>
-
+  <script src="../../../../perf-lib/perf.js"></script>
+  
   <meta charset="utf-8">
   <title>app</title>
 
@@ -19,9 +19,7 @@
 </head>
 <body fullbleed vertical layout>
 
-  <script>
-    console.perf();
-  </script>
+  <script>console.perf();</script>
 
   <x-app flex></x-app>
 
@@ -109,10 +107,7 @@
 
   </script>
 
-  <!-- perf measure -->
-  <script>
-    console.perfEnd();
-  </script>
+  <script>console.perfEnd();</script>
 
 </body>
 </html>
